--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,7 +12,7 @@
             We will get back to you soon. Thank you!</p>
         <form action="contact.php" method="post">
             <div class="row">
-                <input type="radio" id="res" name="subject" value="Reservation"
+                <input type="radio" id="res" name="subject" value="Reservation" required
                        {% if savedvalues.subject =="Reservation" %} checked {% endif %}>
                 <label for="res">Reservation</label>
                 <input type="radio" id="query" name="subject" value="Query"
